--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,8 +1,7 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  padding: 0 10vw
 }
 
 .logo {
